@@ -132,33 +132,10 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Main-Class>pl.PolishSchoolInDublin.MenuMemoryGame</Main-Class>
+                            <Main-Class>pl.polishSchoolInDublin.MenuMemoryGame</Main-Class>
                         </manifestEntries>
                     </archive>
                 </configuration>
-            </plugin>
-
-            <!-- Updated JavaFX Maven Plugin -->
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <mainClass>pl.PolishSchoolInDublin.MenuMemoryGame</mainClass>
-                    <options>
-                        <option>--module-path</option>
-                        <option>C:\Users\Onbu\.m2\repository\org\openjfx\lib</option>
-                        <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml</option>
-                    </options>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
@@ -214,7 +191,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>pl.PolishSchoolInDublin.MenuMemoryGame</mainClass>
+                                    <mainClass>pl.polishSchoolInDublin.MenuMemoryGame</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
